MKBDIGI-220: Fixed z-index for close button

--- a/Resources/sass/modules/_create-media.scss
+++ b/Resources/sass/modules/_create-media.scss
@@ -236,7 +236,8 @@
   }
 
   &--form {
-    margin: 0;
+    max-width: 50em;
+    margin: 0 auto;
   }
 
   &--title[type="text"] {
